# slate-ui

./: .gitignore  README.md  main.spec  pyproject.toml  slate_ui.spec
src/: main.py
src/slate_ui/: baseplate_locations.json  generators.py  main.py  main_window.py  process_control.py  runtime_parameters.json  slate_ui.py
